Bug 125374 - Align bz_st_*
git-svn-id: svn://svn.office.custis.ru/3rdparty/bugzilla.org/trunk@1699 6955db30-a419-402b-8a0d-67ecbb4d7f56

--- a/skins/standard/buglist.css
+++ b/skins/standard/buglist.css
@@ -96,5 +96,5 @@ td.bz_total {
 /* Bug states - duplicated here for external stylesheet usage */
 .bz_st_UNCONFIRMED, .bz_UNCONFIRMED td.first-child a { font-style: italic; }
 .bz_st_RESOLVED, .bz_RESOLVED td.first-child a { text-decoration: line-through; }
-.bz_st_VERIFIED, .bz_VERIFIED td.first-child a { text-decoration: line-through; border: 1px dashed #2f6fab; color: black; background-color: #f9f9f9; line-height: 1.1em; }
-.bz_st_CLOSED, .bz_CLOSED td.first-child a { text-decoration: line-through; border: 1px solid #2f6fab; background-color: #f9f9f9; line-height: 1.1em; }
+.bz_st_VERIFIED, .bz_VERIFIED td.first-child a { text-decoration: line-through; border: 1px dashed #2f6fab; margin: 0 -1px; color: black; background-color: #f9f9f9; line-height: 1.1em; }
+.bz_st_CLOSED, .bz_CLOSED td.first-child a { text-decoration: line-through; border: 1px solid #2f6fab; margin: 0 -1px; background-color: #f9f9f9; line-height: 1.1em; }
